[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/silicon.vfx.lens_flare/lens_flare.gd" type="Script" id=1]
[ext_resource path="res://addons/silicon.vfx.lens_flare/lens_dirt_default.jpeg" type="Texture" id=2]
[ext_resource path="res://demo/CamControl.gd" type="Script" id=3]
[ext_resource path="res://demo/FlareEditor.gd" type="Script" id=4]
[ext_resource path="res://demo/Slider.tscn" type="PackedScene" id=5]
[ext_resource path="res://demo/Square.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 4 ),
"update": 0,
"values": [ Vector2( 0, 578 ), Vector2( 0, 578 ), Vector2( 0, 700 ) ]
}

[sub_resource type="ProceduralSky" id=3]
ground_energy = 0.5
sun_angle_max = 24.52
sun_energy = 16.0

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
tonemap_mode = 1
tonemap_exposure = 0.48
adjustment_brightness = 0.67
adjustment_contrast = 1.91

[node name="Main" type="Spatial"]

[node name="LensFlare" type="Node" parent="."]
script = ExtResource( 1 )
flare_strength = 0.8
flare_bias = 4.0
flare_blur = 2.0
distortion_quality = 0
distortion = 7.0
ghost_count = 7
ghost_spacing = 0.35
halo_width = 0.4
streak_strength = 0.5
lens_dirt = ExtResource( 2 )

[node name="CameraBase" type="Position3D" parent="."]

[node name="Camera" type="Camera" parent="CameraBase"]
transform = Transform( 0.990683, 0.0787858, 0.111085, -0.00953811, 0.853812, -0.520493, -0.135853, 0.514584, 0.846609, 0.140886, -0.660126, 1.07524 )
script = ExtResource( 3 )
camera_speed = 2.17

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 299.0
margin_bottom = -396.0
rect_min_size = Vector2( 240, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 7.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 200, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlareStrength" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 3.0
margin_right = 279.0
margin_bottom = 19.0
text = "Flare Strength"
max_value = 3.0
value = 0.8

[node name="FlareBias" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 23.0
margin_right = 279.0
margin_bottom = 39.0
text = "Flare Bias"
max_value = 20.0
value = 4.0

[node name="FlareBlur" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 43.0
margin_right = 279.0
margin_bottom = 59.0
text = "Flare Blur"
max_value = 8.0
value = 2.0

[node name="Distortion" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 63.0
margin_right = 279.0
margin_bottom = 79.0
text = "Distortion"
max_value = 50.0
value = 7.0

[node name="DistortQuality" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 83.0
margin_right = 279.0
margin_bottom = 103.0

[node name="Label" type="Label" parent="Panel/Settings/DistortQuality"]
margin_top = 3.0
margin_right = 122.0
margin_bottom = 17.0
text = "Distortion Quality: "

[node name="OptionButton" type="OptionButton" parent="Panel/Settings/DistortQuality"]
margin_left = 126.0
margin_right = 279.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Low"
items = [ "Low", null, false, 0, null, "Medium", null, false, 1, null, "High", null, false, 2, null ]
selected = 0

[node name="GhostCount" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 107.0
margin_right = 279.0
margin_bottom = 123.0
text = "Ghost Count"
max_value = 20.0
value = 7.0

[node name="GhostSpacing" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 127.0
margin_right = 279.0
margin_bottom = 143.0
text = "Ghost Spacing"
value = 0.35

[node name="HaloWidth" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 147.0
margin_right = 279.0
margin_bottom = 163.0
text = "Halo Width"
value = 0.4

[node name="StreakStrength" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 167.0
margin_right = 279.0
margin_bottom = 183.0
text = "Streak Strength"
value = 0.5

[node name="LookAround" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "You may look around with the WASD keys"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LookAround"]
autoplay = "instruction"
anims/instruction = SubResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )
[connection signal="value_changed" from="Panel/Settings/FlareStrength" to="Panel" method="_on_FlareStrength_value_changed"]
[connection signal="value_changed" from="Panel/Settings/FlareBias" to="Panel" method="_on_FlareBias_value_changed"]
[connection signal="value_changed" from="Panel/Settings/FlareBlur" to="Panel" method="_on_FlareBlur_value_changed"]
[connection signal="value_changed" from="Panel/Settings/Distortion" to="Panel" method="_on_Distortion_value_changed"]
[connection signal="item_selected" from="Panel/Settings/DistortQuality/OptionButton" to="Panel" method="_on_DistortQuality_item_selected"]
[connection signal="value_changed" from="Panel/Settings/GhostCount" to="Panel" method="_on_GhostCount_value_changed"]
[connection signal="value_changed" from="Panel/Settings/GhostSpacing" to="Panel" method="_on_GhostSpacing_value_changed"]
[connection signal="value_changed" from="Panel/Settings/HaloWidth" to="Panel" method="_on_HaloWidth_value_changed"]
[connection signal="value_changed" from="Panel/Settings/StreakStrength" to="Panel" method="_on_StreakStrength_value_changed"]
